--- a/client/gatling.html
+++ b/client/gatling.html
@@ -7,7 +7,7 @@
   <script type="text/javascript">
     $(function() {
       Gatling.host = "ws://localhost:1987";
-      // Gatling.start();
+      Gatling.start();
 
       $("#btn_1").on("click", jump_2_page1);
     });
